[package]
name = "pyarx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyarx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
arx = { git = "https://github.com/jubako/arx.git", package = "libarx" }
jbk = { git = "https://github.com/jubako/jubako.git", package = "jubako" }
